Change log for zeit.web
=======================

2.44 (unreleased)
-----------------

- ZON-2157: Expose function hook for additional scripts

- ZON-2233: Fix FF < 27 Navigation


2.43 (2015-12-28)
-----------------

- FIX: Wrapper-Apps: Set IVW identifier to `mobzeit` at all times

- FIX: Don't set a marker if you're gonna overwrite the function anyway


2.42 (2015-12-28)
-----------------

- ZON-2533: Fix character count at comment reply form

- FIX: Fix non clickable image bug an fullwidth teaser

- MAINT: Update config, disable ZMO tweet count, fix #536

- FIX: Fix non clickable image bug an fullwidth teaser


2.41 (2015-12-22)
-----------------

- QUICKFIX: Set IVW to always use hybrid delivery method .h


2.40 (2015-12-21)
-----------------

- ZON-2588: Remove trailing slash from host to avoid double slash in URL path

- FIX: Force window reload after premoderation overlay close

- FIX: IVW code in hybrid/wrapper apps


2.39 (2015-12-18)
-----------------

- ZON-2436: Account for image expiration in Nextread

- ZON-2564: Add separate feed `rss-socialflow-facebook-zmo`

- ZON-2260: Columns: use author portraits for social sharing images

- ZON-2551: Make ESI work for Instant Articles feed

- FIX: Retrieve mobile text from the correct field for roost feed

- ZON-2290: Add print CSS

- ZON-2561: Force mobile image for first teaser of authors favorite articles

- FIX: Display bylines on ranking area teasers

- FIX: Fix ZMO pagetitles in articles

- ZON-2543: Show warning if premoderation is active

- ZON-2571: Rework alert for blocked community user

- ZON-2566: Edit text for premoderation popup

- MAINT: Have fake solr return real content dates

- ZON-2580: Fix Webtrekk param 12


2.38 (2015-12-16)
-----------------

- HOTFIX: Set correct IVW-ID for new Android Wrapper App

- ZON-2444, ZON-2455, ZON-2456: Author pages with bio, articles and comments

- ZON-2520: Implement RSS feed for Roost

- ZON-2459: Remove "ZEIT ONLINE" from social media meta titles
